<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="130dp"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:padding="5dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF4E6"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/new_img"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/milk"
            android:contentDescription="@string/image_new" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_view_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:background="@color/orange"
            android:fontFamily="@font/amethysta"
            android:padding="6dp"
            android:text="@string/text_new"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
           />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/new_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_img"
            android:layout_marginTop="6dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/amethysta"
            android:textColor="#AD000000"
            android:text="@string/product_name"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentStart="true"
            android:layout_below="@id/new_product_name"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amethysta"
                android:text="@string/dollar"
                android:textColor="#AD000000"
                android:textSize="17sp"
                android:textStyle="bold"
                 />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/new_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amethysta"
                android:textColor="#AD000000"
                android:textSize="17sp"
                android:textStyle="bold"
                 />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>