<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/transparent"
    app:cardCornerRadius="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF4E6"
        >


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:fontFamily="@font/amethysta"
        android:textColor="#000"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="10dp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_message"
        android:layout_below="@id/text_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_log_out"
        android:layout_marginStart="15dp"
        android:textColor="#000"
        android:fontFamily="@font/amethysta"
        android:textSize="18sp"
        android:padding="5dp"
        />

    <LinearLayout
        android:layout_below="@id/text_message"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/card_button_no"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/transparent"
            >

            <com.balysv.materialripple.MaterialRippleLayout
                style="@style/RippleStyleGrey"
                android:layout_width="50dp"
                android:layout_height="40dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_no"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:background="#f00"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/no"
                    />

            </com.balysv.materialripple.MaterialRippleLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_button_yes"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/transparent"
            >

            <com.balysv.materialripple.MaterialRippleLayout
                style="@style/RippleStyleGrey"
                android:layout_width="50dp"
                android:layout_height="40dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_yes"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_button"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="@string/yes"
                    />

            </com.balysv.materialripple.MaterialRippleLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>