<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF4E6"
    android:layoutDirection="ltr"
    tools:context=".activities.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        app:title="Forgot Password"
        android:layout_alignParentTop="true"

        />

    <ScrollView
        android:layout_below="@id/toolbar_forgot_password"
        android:id="@+id/relative_focus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:focusable="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <ImageView
            android:id="@+id/img_curve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ellipse"
            android:contentDescription="@string/curve"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_below="@id/img_curve"
            android:id="@+id/first_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_text"
            android:padding="10dp"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#ef6c00"
            android:textStyle="bold"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/second_text"
            android:layout_below="@id/first_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/second_text"
            android:padding="10dp"
            android:textSize="17sp"
            android:textColor="#ef6c00"
            android:gravity="center"

            />


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailAddress_layout"
                    android:layout_below="@id/second_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="#ef6c00"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:hint="@string/email_address"
                    android:textColorHint="#ef6c00"

                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#b53d00"
                        android:inputType="textEmailAddress"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="10dp"

                        />

                </com.google.android.material.textfield.TextInputLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/card_find_account"
            android:layout_below="@id/emailAddress_layout"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            android:layout_centerHorizontal="true"
            app:cardBackgroundColor="@color/transparent"
            >

            <com.balysv.materialripple.MaterialRippleLayout
                style="@style/RippleStyleGrey"
                android:layout_width="150dp"
                android:layout_height="50dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_findAccount"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:text="@string/find_account"
                    android:background="@drawable/bg_button"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:textStyle="bold"

                    />

            </com.balysv.materialripple.MaterialRippleLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_message_reset"
            android:layout_below="@id/card_find_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#388E3C"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"

            >

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/bg_progress_bar"
                android:elevation="5dp"
                android:progressBackgroundTint="@color/white"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/loading"
                android:textColor="#B7000000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>