<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:layout_margin="3dp"
    app:cardElevation="3dp"
    >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:background="#FFF4E6"
        >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_my_cart"
        android:layout_width="130dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/image_cart" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/product_name_cart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_my_cart"
        android:layout_marginHorizontal="10dp"
        android:padding="5dp"
        android:text="@string/product_name"
        android:fontFamily="@font/amethysta"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#000"
        android:maxLines="1"
        android:ellipsize="end"
        />


        <LinearLayout
            android:id="@+id/linear_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/product_name_cart"
            android:layout_toEndOf="@id/image_my_cart"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="30dp"
            >
            <ImageButton
                android:id="@+id/img_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_minus"
                android:background="@color/transparent"
                android:contentDescription="@string/image_minus" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_quantity_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:fontFamily="@font/amethysta"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="5dp"
                android:textColor="#000"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                />
            <ImageButton
                android:id="@+id/img_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_plus"
                android:background="@color/transparent"
                android:contentDescription="@string/image_plus" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/linear_quantity"
            android:layout_toEndOf="@id/image_my_cart"
            android:layout_toStartOf="@id/img_delete"
            android:layout_marginStart="30dp"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/dollar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="$"
                android:fontFamily="@font/amethysta"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#B5000000"
                android:maxLines="2"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_price_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6000"
                android:fontFamily="@font/amethysta"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#B5000000"
                android:maxLines="1"
                android:ellipsize="end"
                />

        </LinearLayout>

        <ImageButton
            android:id="@+id/img_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_delete_24"
            android:background="@color/transparent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/image_plus" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>