<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF4E6"
    android:layoutDirection="ltr"
    tools:context=".activities.CartActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/transparent"
        app:cardElevation="0dp"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:background="@drawable/bg_card_view"
            >
            <RelativeLayout
                android:id="@+id/relative_action_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="15dp"
                >
                <com.balysv.materialripple.MaterialRippleLayout
                    android:id="@+id/ripple_arrow"
                    style="@style/RippleStyleGrey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    >

                <ImageButton
                    android:id="@+id/icon_arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:contentDescription="@string/arrow_back"
                    android:background="@color/transparent"
                    android:paddingTop="3dp"

                    />
                </com.balysv.materialripple.MaterialRippleLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_title_action_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/ripple_arrow"
                    android:text="@string/my_cart"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="25dp"
                    android:textColor="@color/white"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_sub"
                android:layout_below="@id/relative_action_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_sub_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/text_result_sub_total"
                android:text="@string/sub_total"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/amethysta"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="25dp"
                />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_result_sub_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/sub_total"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/amethysta"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="25dp"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relative_shipping"
                android:layout_below="@id/relative_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/text_result_shipping"
                    android:text="@string/shipping"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/amethysta"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="25dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_result_shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/shipping"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/amethysta"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="25dp"

                    />

            </RelativeLayout>
            <View
                android:id="@+id/view_line"
                android:layout_below="@id/relative_shipping"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:background="@color/white"
                />

            <RelativeLayout
                android:id="@+id/relative_total"
                android:layout_below="@id/view_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                >


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/text_result_total"
                    android:text="@string/total"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:fontFamily="@font/amethysta"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="25dp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_result_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/total"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/amethysta"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="25dp"

                    />

            </RelativeLayout>
        </RelativeLayout>


    </androidx.cardview.widget.CardView>

   <LinearLayout
       android:id="@+id/linear_number_of_items"
       android:layout_below="@id/card_result"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginHorizontal="20dp"
       android:layout_marginVertical="15dp"
       >
       <androidx.appcompat.widget.AppCompatTextView
           android:id="@+id/text_number_of_items"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textStyle="bold"
           android:textSize="20sp"
           android:textColor="#000"
           android:layout_marginEnd="5dp"
           android:fontFamily="@font/amethysta"
           />

       <androidx.appcompat.widget.AppCompatTextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/in_your_shopping_cart"
           android:textSize="19sp"
           android:textColor="#000"
           android:fontFamily="@font/amethysta"
           />

   </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rec_items_cart"
        android:layout_below="@+id/linear_number_of_items"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"

        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_buy_now"
        android:layout_alignParentBottom="true"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="@color/transparent"
        >

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleStyleGrey"
            android:layout_width="250dp"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_buy_now"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@drawable/bg_button"
                android:textSize="18sp"
                android:padding="10dp"
                android:drawableStart="@drawable/ic_baseline_shopping_cart_24"
                android:textStyle="bold"
                android:text="@string/buy_now"
                android:textAllCaps="false"
                />

        </com.balysv.materialripple.MaterialRippleLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>